--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -11,7 +11,7 @@ a {
 	display: none;
 }
 .card-category, .section-tagline {
-	color: var(--color-primary)
+	color: var(--color-primary);
 }
 
 html.color-primary {
