--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -2,18 +2,12 @@
 
 html {
 	scroll-behavior: smooth;
-	--color-primary: #d73953;
-	--color-black: #090909;
-	--color-white: #ffffff;
-	--color-light-grey: #f3f3f3;
-	--color-dark-grey: #353535;
-	--text-color: var(--color-black);
 }
 body {
-	color: var(--text-color);
+  color: var(--text-color);
 }
 a {
-	color: var(--text-color);
+  color: var(--text-color);
 }
 .visually-hidden {
 	display: none;
@@ -22,4 +16,11 @@ a {
 	color: var(--color-primary);
 }
 
-
+:root{
+	--color-primary: #d73953;
+	--color-black: #090909;
+	--color-white: #ffffff;
+	--color-grey: #f3f3f3;
+	--color-dark-grey: #353535;
+	--text-color: var(--color-black);
+}
