--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -33,7 +33,7 @@ body {
 	font-weight: var(--font-weight-regular);
 	line-height: var(--line-height-base);
 }
-a[href] {
+a {
 	color: var(--text-color);
 	text-decoration: none;
 	
