--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -33,10 +33,9 @@ body {
 	font-weight: var(--font-weight-regular);
 	line-height: var(--line-height-base);
 }
-a {
+a[href] {
 	color: var(--text-color);
 	text-decoration: none;
-	
 }
 a[href]:visited {
 	font-style: italic;
