--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -220,7 +220,9 @@ template {
 	--section-title-color: var(--color-black);
 }
 
-::before {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
