--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -195,6 +195,8 @@ template {
   display: none;
 }
 
+/*# sourceMappingURL=normalize.min.css.map */
+
 :root {
 	--color-primary: #d73953;
 	--color-black: #090909;
@@ -285,3 +287,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: var(--font-weight-bold);
 }
 
+.container {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* 
