--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -226,12 +226,12 @@ template {
 	--section-footer-padding: 3rem 0 0;
 	--section-footer-align: center;
 	--footer-padding: 5rem 0 1rem;
-	--nav-item-font-family: font-family-title;
-	--nav-item-font-weight: font-weight-bold;
-	--nav-item-font-size: font-size-medium;
+	--nav-item-font-family: var(--font-family-title);
+	--nav-item-font-weight: var(--font-weight-bold);
+	--nav-item-font-size: var(--font-size-medium);
 	--nav-item-letter-spacing: 0.04rem;
 	--nav-item-display: inline-block;
-	--nav-item-margin: 0 0 3rem 0;
+	--nav-item-margin: 0 0 4.8rem 0;
 	--nav-item-link-hover: var(--color-primary);
 }
 
@@ -345,11 +345,11 @@ h1, h2, h3, h4, h5, h6 {
 	margin: var(--nav-item-margin);
 }
 
-.nav-link nav {
+.nav-link {
 	display: block;
 	padding: 0.5rem 1rem;
 }
 
-.nav-link nav:hover {
+.nav-link:hover {
 	color: var(--nav-item-link-hover);
 }
