--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -235,11 +235,9 @@ template {
 	--nav-item-link-hover: var(--color-primary);
 }
 
-/* Applique le modèle de boîte 'border-box' à tous les éléments */
-/* Cela signifie que la largeur et la hauteur incluent le padding et la bordure */
 *,
-*::before, /* Inclut aussi les pseudo-éléments ::before de tous les éléments */
-*::after { /* Inclut aussi les pseudo-éléments ::after de tous les éléments */
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
@@ -322,7 +320,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-	padding: var(--footer-padding)
+	padding: var(--footer-padding);
 }
 
 .navbar-menu:target {
