--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -389,8 +389,9 @@ ul.row {
 	width: 33.3333%;
 }
 
-[data-section-theme=“dark”]{
+[data-section-theme="dark"] {
 	--text-color: var(--color-white);
 	--section-title-color: var(--color-white);
 	background: var(--color-black);
 }
+
