--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -404,5 +404,6 @@ ul.row {
 }
 
 .social-link > svg {
-	color: var(--text-color);
+	fill: var(--text-color);
 }
+/* on utilise fill pour colorer un svg et non color */
