--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -454,12 +454,12 @@ ul.row {
 
 .card-testimonial .card-avatar {
 	border-radius: 50%;
-	width: 10;
-	height: 10;
+	width: 10rem;
+	height: 10rem;
 }
 
 .card-testimonial .card-quote cite {
 	display: block;
-	padding-top: 1;
+	padding-top: 1rem;
 	color: var(--color-primary);
 }
