--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -490,9 +490,9 @@ ul.row {
 	position: var(--header-logo-position);
 }
 
-.header-logo:link {
+.header-logo a {
 	display: var(--header-logo-link-display);
 	position: var(--header-logo-link-position);
-	vertical-align: var(--header-logo-link-top);
-	vertical-align: var(--header-logo-link-left);
+	top: var(--header-logo-link-top);
+	left: var(--header-logo-link-left);
 }
