--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -385,6 +385,21 @@ h1, h2, h3, h4, h5, h6 {
 	color: var(--nav-item-link-hover);
 }
 
+nav .nav-link::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: var(--color-white);
+	width: 0;
+	height: 0.2rem;
+}
+
+nav .nav-item:hover .nav-link::before {
+	background-color: var(--color-primary);
+	width: 100%;
+}
+
 ul.row {
 	margin: 0;
 	padding: 0;
@@ -496,19 +511,4 @@ ul.row {
 	position: var(--header-logo-link-position);
 	top: var(--header-logo-link-top);
 	left: var(--header-logo-link-left);
-}
-
-nav .nav-link::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: var(--color-white);
-	width: 0;
-	height: 20%;
-}
-
-nav .nav-item:hover .nav-link::before {
-	background-color: var(--color-primary);
-	width: 100%;
 }
