--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -526,6 +526,7 @@ ul.row {
 
 .card-work .card-inner {
 	position: absolute;
+	top: -0.1rem;
 	left: -0.1rem;
 	right: -0.1rem;
 	z-index: 1;
@@ -538,11 +539,14 @@ ul.row {
 .card-title a, .card-work a {
 	display: block;
 	text-decoration: none;
-	padding-top: 0.45rem;
+	padding-top: 45%;
 }
 .card-title a::after, .card-work a::after {
 	position: absolute;
-	position: 0;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
 	content: "";
 }
 
