--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -536,12 +536,20 @@ ul.row {
 	background-color: rgba(0, 0, 0, 0.7);
 }
 
+.card-work .card-title{
+  text-align: center;
+  margin: 0;
+  opacity: 0;
+  height: 100%;
+  position: relative;
+}
+
 .card-title a, .card-work a {
 	display: block;
 	text-decoration: none;
 	padding-top: 45%;
 }
-.card-title a::after, .card-work a::after {
+.card-work .card-title a::after {
 	position: absolute;
 	top: 0;
 	right: 0;
