--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -537,18 +537,19 @@ ul.row {
 }
 
 .card-work .card-title{
-  text-align: center;
-  margin: 0;
-  opacity: 0;
-  height: 100%;
-  position: relative;
+	text-align: center;
+	margin: 0;
+	opacity: 0;
+	height: 100%;
+	position: relative;
 }
 
-.card-title a, .card-work a {
+.card-work .card-title a {
 	display: block;
 	text-decoration: none;
 	padding-top: 45%;
 }
+
 .card-work .card-title a::after {
 	position: absolute;
 	top: 0;
