--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -297,6 +297,8 @@ a:active {
 	color: var(--button-hover-color);
 	text-decoration: var(--button-hover-text-decoration);
 	background: var(--button-hover-background);
+	transition: var(--transition-duration);
+	transition-property: color, background-color;
 }
 
 .visually-hidden {
